chore: input color

--- a/src/frontend/src/app.css
+++ b/src/frontend/src/app.css
@@ -6,3 +6,6 @@
 color: #fff;
 background-image: linear-gradient(to bottom right, rgb(29 78 216 / var(--tw-bg-opacity, 1)),  rgb(29 78 216 / var(--tw-bg-opacity, 0)));
 }
+.input {
+color: #000;
+}
